# dotfiles

./: .gitconfig  .gitignore  .vimrc  .zshrc  AGENTS.md  README.md  install.sh
agents/: AGENTS.md  AGENTS.shared.md  install.sh  statusline-command.sh
agents/prompts/: brainstorming.md  post-task-reflection.md
agents/skills/agent-browser/: SKILL.md
agents/skills/agent-browser-cookies/: SKILL.md
agents/skills/agent-browser-cookies/scripts/: export_cookies.py  import_cookies.py
agents/skills/lint-init/: SKILL.md
agents/skills/lint-init/references/: golang.md  java.md  python.md  rust.md  typescript.md
agents/skills/mermaid-viewer/: SKILL.md
agents/skills/mermaid-viewer/scripts/: .gitignore  package.json  server.ts  start-server.sh
agents/skills/personal-voice/: .gitignore  SKILL.md
agents/skills/review-skill/: SKILL.md
agents/skills/review-skill/references/: best-practices-checklist.md
agents/skills/view-as-html/: SKILL.md
agents/skills/view-as-html/assets/: starter.html
agents/skills/view-as-html/references/: design-system.md  gallery.md  patterns.md
macos/: .mackup.cfg  Brewfile  Brewfile.lock.json  install.sh  sys_prefer.sh
macos/cmux/: cmux.json
macos/game/: Brewfile
macos/ghostty/: config
macos/iterm2-cfg/: com.googlecode.iterm2.plist
macos/zed/: keymap.json  settings.json
mise/: config.toml  install.sh
proxy/: alias.zsh
scripts/pull-request-picker/: pyproject.toml
scripts/pull-request-picker/pull_request_picker/: main.py
zsh/: .p10k.zsh  .zshrc  install.sh  proxy.zsh
(+21 files in other folders)
