[tool.poetry]
name = "pull-request-picker"
version = "0.1.0"
description = ""
authors = ["jiachen <yu.jiachen@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pygithub = "^2.5.0"
python-dateutil = "^2.9.0.post0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
